# habitos-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Pasta  README.md  pyproject.toml
.github/workflows/: ci.yml
SRC/Habitos/: __init__.py  main.py  manager.py  motivacao.py  storage.py
Testes/: conftest.py  test_integracao.py  test_manager.py  test_storage.py
