[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "habitos-cli"
version = "1.0.0"
description = "Checklist de hábitos diários para o terminal"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Seu Nome", email = "seu@email.com" }]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
habitos = "habitos.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []
